translation does not work in spacebar search and in some node editor places #44237

Closed
opened 2015-04-02 16:30:18 +02:00 by blend-it · 14 comments
Member

System Information

Blender Version
all

Short description of error

  1. spacebar search always use english command name and totally ignore i18n translation. This can be sometime useful, but can be a good idea if the user can choose if use original command names or translated ones, similar to "interface/tooltips/new data" buttons (see User Preferences > System > Translation: )
    If possible, I suggest to add a 4° button in preferences, as the user can choose if use original or translated command name in spacebar search.
    space-translate.png

  2. some panels in Property sidebar in node editor are not translated also if the corresponding string appears translated in the corresponding node box.
    node-translate.png

Exact steps for others to reproduce the error
Activate a translation and see.

Attached images for graphical explication

**System Information** <not pertinent> **Blender Version** all **Short description of error** 1) spacebar search always use english command name and totally ignore i18n translation. This can be sometime useful, but can be a good idea if the user can choose if use original command names or translated ones, similar to "interface/tooltips/new data" buttons (see User Preferences > System > Translation: ) If possible, I suggest to add a 4° button in preferences, as the user can choose if use original or translated command name in spacebar search. ![space-translate.png](https://archive.blender.org/developer/F157487/space-translate.png) 2) some panels in Property sidebar in node editor are not translated also if the corresponding string appears translated in the corresponding node box. ![node-translate.png](https://archive.blender.org/developer/F157489/node-translate.png) **Exact steps for others to reproduce the error** Activate a translation and see. Attached images for graphical explication
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @blend-it

Added subscriber: @blend-it
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Not really a bug, but something we should tackle in future. Changing to todo.

Not really a bug, but something we should tackle in future. Changing to todo.
Bastien Montagne self-assigned this 2015-04-02 19:55:22 +02:00

This issue was referenced by 99d8e08ed9

This issue was referenced by 99d8e08ed9df1d8b163908eceb81fc8c7990f853

This issue was referenced by 13a63234d6

This issue was referenced by 13a63234d6a63c334b550215b3345b46956fcef7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 99d8e08ed9.

Closed by commit 99d8e08ed9.
Author
Member

Wow!
Super fast! :-)

like this, spacebar search commands are by default and always translated, isn't?

Wow! Super fast! :-) like this, spacebar search commands are by default and always translated, isn't?

Yes, as long as you enable translation of interface (if you only enable tooltip translation, then it remains in english as all other button/menu/etc. label. :) ).

Yes, as long as you enable translation of interface (if you only enable tooltip translation, then it remains in english as all other button/menu/etc. label. :) ).
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Member

This is a long waited i18n feature (just thought it would be super hard to implement). Thank you so much Bastien!

This is a long waited i18n feature (just thought it would be super hard to implement). Thank you so much Bastien!
Author
Member

Added subscriber: @mont29

Added subscriber: @mont29
Author
Member

@mont29
ok, so no specific button to toggle.
If not too hard, and when possible, I think is better to have a selective disable of this function for people that use translated interface but need to learn on english tutorials (or on very diffused translated tutorials with english commands).
I dont' know chinese, french or spanish situation, but a lot of italians tutorials and books use english terms so suggest to use english interface :-, so I think can be useful to have translated interface but also a fast way to find english commands.
Of course, when peoples becomes more skilled, they can switch to all-translated interface because of course commands in native language are more easy and friendly to remember.

In any case, I quote leon: thank you so much! ;)

@mont29 ok, so no specific button to toggle. If not too hard, and when possible, I think is better to have a selective disable of this function for people that use translated interface but need to learn on english tutorials (or on very diffused translated tutorials with english commands). I dont' know chinese, french or spanish situation, but a lot of italians tutorials and books use english terms so suggest to use english interface :-\, so I think can be useful to have translated interface but also a fast way to find english commands. Of course, when peoples becomes more skilled, they can switch to all-translated interface because of course commands in native language are more easy and friendly to remember. In any case, I quote leon: thank you so much! ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44237
No description provided.